# majhong

./: .gitignore  CMakeLists.txt  README.md  constants.h  hand.cpp  hand_analysis.h  player.h  table.h  tiles.h  types.h  utility.h  utils.h  yaku_analysis.cpp
docs/: yaku.md
src/: main.cpp
src/core/: constants.cpp  constants.h  hand.cpp  hand_action.cpp  tiles.cpp  tiles.h  types.h  yaku_analysis.cpp
src/display/: printer.cpp  printer.h
src/game/: game_state.cpp  game_state.h  player.cpp  player.h  simple_ai.cpp  simple_ai.h  table.cpp  table.h
src/hand/: constants.cpp  hand.h  hand_action.cpp  scoring.cpp  scoring.h  tilefamily.cpp  tiles.cpp  types.h  yaku_analysis.cpp
src/network/: room.cpp  room.h  server.cpp  server.h  session.cpp  session.h
tests/: test_hand.cpp  test_hand_action.cpp  test_parsewinninghand.cpp  test_yaku.cpp  test_yakuman.cpp
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css  types.ts
web/src/components/: ActionBar.tsx  DiscardsView.tsx  GamePage.tsx  HandView.tsx  Lobby.tsx  TableView.tsx  Tile.tsx  WaitingRoom.tsx  index.ts
web/src/hooks/: index.ts  useGame.ts  useWebSocket.ts
